--- a/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
+++ b/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
@@ -247,6 +247,12 @@
   <ItemGroup>
     <None Include="Properties\delete32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\reconsulta32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\verExp.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
