--- a/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
+++ b/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
@@ -170,7 +170,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\logo SIMED.jpg" />
