--- a/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
+++ b/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
@@ -55,12 +55,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DA\AdministrativoDa.cs" />
+    <Compile Include="DA\anamnesisDa.cs" />
     <Compile Include="DA\ClienteDA.cs" />
     <Compile Include="DA\Empresa.cs" />
     <Compile Include="DA\ExpedienteDA.cs" />
     <Compile Include="DA\MedicoDa.cs" />
     <Compile Include="DA\Planes_EmpresarialesDA.cs" />
     <Compile Include="Entity\AdministrativoEntity.cs" />
+    <Compile Include="Entity\anamnesis.cs" />
     <Compile Include="Entity\ClienteEntity.cs" />
     <Compile Include="Entity\EmpresaEntity.cs" />
     <Compile Include="Entity\ExpedienteEntity.cs" />
@@ -117,6 +119,7 @@
       <DependentUpon>Frm_Splash.cs</DependentUpon>
     </Compile>
     <Compile Include="IT\AdministrativoIT.cs" />
+    <Compile Include="IT\anamnesisIT.cs" />
     <Compile Include="IT\ClienteIT.cs" />
     <Compile Include="IT\EmpresaIT.cs" />
     <Compile Include="IT\ExpedienteIT.cs" />
