--- a/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
+++ b/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
@@ -76,6 +76,12 @@
     <Compile Include="frmVerExpediente.Designer.cs">
       <DependentUpon>frmVerExpediente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Cliente.Designer.cs">
+      <DependentUpon>frm_Cliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_ExpedienteMG.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmVerExpediente.resx">
       <DependentUpon>frmVerExpediente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Cliente.resx">
+      <DependentUpon>frm_Cliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_ExpedienteMG.resx">
       <DependentUpon>frm_ExpedienteMG.cs</DependentUpon>
@@ -191,9 +200,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\upload.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Properties\save.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\agregar.png" />
@@ -266,6 +272,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\camera.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\saveIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\changePhoto.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\deletePhoto.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
