Se mejoran los combos de especialidades y empresas y la base de datos con algunas FK. Se cambia el tamaño de letra de empresas

--- a/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
+++ b/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
@@ -57,12 +57,14 @@
     <Compile Include="DA\AdministrativoDa.cs" />
     <Compile Include="DA\anamnesisDa.cs" />
     <Compile Include="DA\Empresa.cs" />
+    <Compile Include="DA\EspecialidadDA.cs" />
     <Compile Include="DA\ExpedienteDA.cs" />
     <Compile Include="DA\PersonaDA.cs" />
     <Compile Include="DA\Planes_EmpresarialesDA.cs" />
     <Compile Include="Entity\AdministrativoEntity.cs" />
     <Compile Include="Entity\anamnesis.cs" />
     <Compile Include="Entity\EmpresaEntity.cs" />
+    <Compile Include="Entity\EspecialidadEntity.cs" />
     <Compile Include="Entity\ExpedienteEntity.cs" />
     <Compile Include="DA\UsuarioDa.cs" />
     <Compile Include="Entity\PersonaEntity.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="IT\AdministrativoIT.cs" />
     <Compile Include="IT\anamnesisIT.cs" />
     <Compile Include="IT\EmpresaIT.cs" />
+    <Compile Include="IT\EspecialidadIT.cs" />
     <Compile Include="IT\ExpedienteIT.cs" />
     <Compile Include="IT\PersonaIT.cs" />
     <Compile Include="IT\Planes_EmpresarialIT.cs" />
