--- a/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
+++ b/SIMEDVirtual/SIMEDVirtual/SIMEDVirtual.csproj
@@ -85,6 +85,12 @@
     <Compile Include="Frm_Administrativo.Designer.cs">
       <DependentUpon>Frm_Administrativo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_cambiar_contrasena.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_cambiar_contrasena.Designer.cs">
+      <DependentUpon>frm_cambiar_contrasena.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Cliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Administrativo.resx">
       <DependentUpon>Frm_Administrativo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_cambiar_contrasena.resx">
+      <DependentUpon>frm_cambiar_contrasena.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Cliente.resx">
       <DependentUpon>frm_Cliente.cs</DependentUpon>
@@ -327,6 +336,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\pdf.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\account.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\pass.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
